--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lucia-auth/adapter-sqlite": "^3.0.2",
     "better-sqlite3": "^9.4.3",
+    "lucia": "^3.2.2",
+    "lucia-auth": "^1.8.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
